all trim() replaced with strip()